Fix title logo vertical align

--- a/week-3/tea/assets/css/main.css
+++ b/week-3/tea/assets/css/main.css
@@ -34,6 +34,7 @@ header {
 
 .header-content {
     display: flex;
+    align-items: center;
 }
 
 .header-content:last-child {
